--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -1,18 +1,12 @@
 <footer class="footer">
     <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> tareas pendientes</span>
+    <span class="todo-count"><strong>{{pendientes}} </strong>tareas pendientes </span>
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
-        <li>
-            <a class="selected" href="#/">Todas</a>
-        </li>
-        <li>
-            <a href="#/active">Activos</a>
-        </li>
-        <li>
-            <a href="#/completed">Completados</a>
+        <li *ngFor="let filtro of filtros">
+            <a (click)="seleccionarFiltro(filtro)" [class.selected]="filtro == filtroActual" href="#/">{{ filtro}}</a>
         </li>
     </ul>
     <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Borrar completados</button>
+    <button (click)="borrarCompletados()" class="clear-completed">Borrar completados</button>
 </footer>
